<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/ivHeliDetail"
        android:layout_width="@dimen/_300dp"
        android:layout_height="@dimen/_200dp"
        android:layout_marginTop="@dimen/_50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donuts"
        android:contentDescription="@string/txt_imageview" />

    <TextView
        android:id="@+id/tvNameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_name_detail"
        android:textSize="@dimen/_30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeliDetail" />

    <TextView
        android:id="@+id/tvPriceDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_price"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameDetail" />

    <TextView
        android:id="@+id/tvDescDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceDetail" />
</androidx.constraintlayout.widget.ConstraintLayout>