<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:cardCornerRadius="@dimen/_10dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivItem"
                android:layout_width="@dimen/_90dp"
                android:layout_height="@dimen/_58dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:contentDescription="@string/txt_imageview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/donuts"/>

            <TextView
                android:id="@+id/tvNameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/txt_name"
                android:textSize="@dimen/_24sp"
                android:layout_marginTop="@dimen/_10dp"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toTopOf="@+id/ivItem" />

            <TextView
                android:id="@+id/tvPriceItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/txt_harga"
                app:layout_constraintBottom_toBottomOf="@+id/ivItem"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@+id/tvNameItem"
                app:layout_constraintVertical_bias="0.055" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>